--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Chris</title>
+        <title>Chris About Me</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -16,7 +16,7 @@
     <div class="container">
     	<div class="header">
 			<h1>
-				This is my header
+				Chris Roy
 			</h1>	
     	</div>
     
@@ -33,7 +33,7 @@
 		
 			<div class="profile">
 				<h2>About me:</h2>
-				<p>this is a paragraph</p>
+				<p>this is a paragraph about me</p>
 			
 			</div>
 			<div class="aside">
