Added text "about me"

--- a/index.html
+++ b/index.html
@@ -33,7 +33,17 @@
 		
 			<div class="profile">
 				<h2>About me:</h2>
-				<p>this is a paragraph about me</p>
+				<p>Hey there, welcome to my "About Me" page.
+					I guess the most interesting thing to know about me is that I like mostly things that go <em>fast!</em>
+				
+				<br>
+					<strong>Fast cars, fast boats, or a fast motorcycle interests me.</strong>
+				</br>
+				
+				I guess the reason why I like fast things is becasue I'm an Industrial Designer to the core and fast things have a dynamic design that .....
+	
+		
+				</p>
 			
 			</div>
 			<div class="aside">
